--- a/hw3/src/Makefile.in
+++ b/hw3/src/Makefile.in
@@ -1,7 +1,7 @@
 CSRCS     = $(wildcard *.cpp)
 CHDRS     = $(wildcard *.h)
 COBJS     = $(addsuffix .o, $(basename $(CSRCS)))
-
+ 
 EXTINCDIR = ../../include
 DEPENDDIR = -I. -I$(EXTINCDIR)
 LIBDIR    = ../../lib
@@ -15,7 +15,7 @@ ECHO      = /bin/echo
 #CFLAGS = -O3 -Wall $(PKGFLAG)
 CFLAGS = -m32 -O3 -Wall -DTA_KB_SETTING $(PKGFLAG)
 CFLAGS = -O3 -Wall -DTA_KB_SETTING $(PKGFLAG)
-CFLAGS = -g -Wall -DTA_KB_SETTING $(PKGFLAG)
+CFLAGS = -g -Wall -DTA_KB_SETTING $(PKGFLAG) -D_GLIBCXX_USE_CXX11_ABI=0
 
 .PHONY: depend extheader
 
